--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Recreation of the card game Skystones from the Skylanders video game series.">
+        <meta name="author" content="Yex">
+        <meta name="keywords" content="skystones, Skystones, skylanders, skystones web">
+        <link rel="icon" type="image/png" href="./assets/site/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="./assets/site/favicon.svg" />
+        <link rel="shortcut icon" href="./assets/site/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/site/apple-touch-icon.png" />
+        <meta name="apple-mobile-web-app-title" content="Skystones" />
+        <link rel="manifest" href="./assets/site/site.webmanifest" />
+        <title>Skystones</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
+    </head>
+    <body>
+
+        <footer>
+            <p>
+                This is a fan-made recreation of the Skystones minigame originally featured in the Skylanders series. 
+                All rights to Skylanders, Skystones, and related intellectual property belong to Activision Publishing, Inc. 
+                This project is non-commercial and created solely for educational and entertainment purposes. 
+                It is not affiliated with, endorsed by, or sponsored by Activision or Toys For Bob.
+            </p>
+        </footer>
+        
+        <script src="./assets/js/localforage.js"></script>
+        <script src="./assets/js/main.js"></script>
+    </body>
 </html>
